k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: LoadBalancer
  ports:
  - port: 5010
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-gateway
